--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<mat-toolbar>
-  <span>Pass Matrix</span>
-</mat-toolbar>
+<div class="app-wrapper">
+    <mat-toolbar>
+        <span>Pass Matrix</span>
+    </mat-toolbar>
+    <nav>
+        <a routerLink="/home">Home</a>
+        <a routerLink="/login">Login</a>
+        <a routerLink="/register">Register</a>
+    </nav>
+    <router-outlet></router-outlet>
+</div>
