Initial code for registration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-wrapper">
+<div class="app-wrapper mat-app-background">
     <mat-toolbar>
         <span>Pass Matrix</span>
     </mat-toolbar>
