--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -2,6 +2,12 @@
     border: 10px solid green;
 } */
 
+.wrapper {
+  height: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
 img {
     border: solid 1px black;
 }
