--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,8 @@
+.wrapper {
+    height: 100%;
+    box-sizing: border-box;
+}
+
 img {
     border: solid 1px black;
 }
@@ -19,5 +24,15 @@ img.image-tile {
 }
 
 .image-list-wrapper {
-  max-width: 40%;
+    max-width: 40%;
+}
+
+.login-success {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #a1caff;
+    font-size: 2em;
+    font-family: 'Roboto', sans-serif;
 }
